generify date helpers and add unit tests